update more css - about, contact, fix portfolio card on tablet, fix skills cards height issue

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0rem 2em;
 
     .mainContainer {
         display: flex;
@@ -61,6 +62,7 @@
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
+                    border-radius: 3px;
                 }
             }
     
