--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -34,6 +34,11 @@
             align-items: center;
         }
 
+        @include tablet {
+            text-align: center;
+            align-items: center;
+        }
+
         .prompt {
             font-size: var(--fs-200);
         }
