--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -72,7 +72,7 @@
   }
 
   @include tablet {
-    flex: 1 1 calc(100% - 2rem);
+    flex: 1 1 calc(50% - 2rem);
   }
 }
 
@@ -96,16 +96,3 @@
 .portfolio-item-description {
   margin-bottom: 1.75rem;
 }
-
-
-// @media (min-width: 768px) {
-//   .grid-container {
-//     grid-template-columns: repeat(2, 1fr); /* md:grid-cols-2 */
-//   }
-// }
-
-// @media (min-width: 1024px) {
-//   .grid-container {
-//     grid-template-columns: repeat(3, 1fr); /* lg:grid-cols-3 */
-//   }
-// }
