--- a/src/components/skills/card/Card.scss
+++ b/src/components/skills/card/Card.scss
@@ -3,10 +3,11 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    width: 55vh;
-    height: 55vh;
+    min-width: 47vh;
+    min-height: 55vh;
     border: 2px dashed #cfdbd5;
-    padding: 2rem;
+    padding: 0rem 2rem;
+    font-size: var(--fs-text);
     gap: 2rem;
     background-color: var(--secondary);
 
@@ -27,6 +28,6 @@
     }
 
     p {
-        font-size: 1.25rem;
+        font-size: 1.25em;
     }
 }
